ft: Added ingredient get / edit / delete features
