# src/controllers/ingredietController.js
@@ -5,7 +5,9 @@ const {
   successResponse, errorResponse,
 } = Toolbox;
 
-const { addIngredient } = IngredientService;
+const {
+  addIngredient, updateBykey, deleteBykey, getAllIngredients
+} = IngredientService;
 
 /**
  * Ingredients Controller
@@ -24,6 +26,57 @@ export default class IngredientController {
     try {
       const addedIngredient = await addIngredient({ name, unit });
       successResponse(res, { message: 'Ingredient added successfully', addedIngredient }, 201);
+    } catch (error) {
+      errorResponse(res, {});
+    }
+  }
+
+  /**
+   * update an ingredient
+   * @param {object} req
+   * @param {object} res
+   * @returns {JSON } A JSON response with the updated ingredients
+   * @memberof IngredientController
+   */
+  static async updateIngredient(req, res) {
+    try {
+      const { name } = req.body;
+      const ingredient = await updateBykey(req.body, { name });
+      successResponse(res, { message: 'Ingredient update was successful', ingredient });
+    } catch (error) {
+      errorResponse(res, {});
+    }
+  }
+
+  /**
+   * delete an ingredient
+   * @param {object} req
+   * @param {object} res
+   * @returns {JSON } A JSON response with message
+   * @memberof IngredientController
+   */
+  static async deleteIngredient(req, res) {
+    try {
+      const { name } = req.body;
+      await deleteBykey(req.body, { name });
+      successResponse(res, { message: 'Ingredient deleted succesfully' });
+    } catch (error) {
+      errorResponse(res, {});
+    }
+  }
+
+  /**
+   * get all ingredients
+   * @param {object} req
+   * @param {object} res
+   * @returns {JSON} A JSON response with all ingredients
+   * @memberof IngredientController
+   */
+  static async getAllIngredients(req, res) {
+    try {
+      const allIngredients = await getAllIngredients();
+      if (!allIngredients.length) return errorResponse(res, { code: 404, message: 'There are no ingredients' });
+      return successResponse(res, { ...allIngredients });
     } catch (error) {
       errorResponse(res, {});
     }
