# src/routes/ingredient.js
@@ -7,10 +7,13 @@ const router = Router();
 
 const { authenticate, isVerified } = AuthMiddleware;
 const { verifyRoles } = UserMiddleware;
-const { onAddIngredient } = IngredientMiddleware;
-const { addIngredient } = IngredientController;
+const { onAddIngredient, ingredientCheck } = IngredientMiddleware;
+const { addIngredient, updateIngredient, deleteIngredient, getAllIngredients } = IngredientController;
 const { admin } = PermissionsData;
 
 router.post('/', authenticate, verifyRoles(admin), isVerified, onAddIngredient, addIngredient);
+router.patch('/edit', authenticate, verifyRoles(admin), isVerified, ingredientCheck, updateIngredient);
+router.delete('/', authenticate, verifyRoles(admin), isVerified, ingredientCheck, deleteIngredient);
+router.get('/all', authenticate, verifyRoles(admin), isVerified, getAllIngredients);
 
 export default router;
